# kitbag

./: .gitignore  README.md  pyproject.toml
src/kitbag/: __init__.py  logging.py
