[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kitbag"
version = "0.1.0"
description = "Personal grab-bag of reusable utilities."
requires-python = ">=3.10"
dependencies = [
    "python-json-logger>=3.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
